2005-06-12  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* many files
	  - lessened build dependencies
	  - made code compile on gcc 4.0
	* font.cpp
	  - fixed "uppercase letters displayed only" bug
	* water.cpp
	  - water height and subdetail computed at runtime
	  - extreme reduction of memory usage
	  - increased vertex efficiency
	  - consider displacement of waves when drawing water
	  - (lots of) bugfixes

2005-06-09  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* water.* perlinnoise.* fixed.h
	  - speed up perlinnoise generation with new fixed point data type
	  - water subdetail computed by perlin noise
	  - wave tile and sub detail now computed completely on the fly, needing more CPU
	    power but saving MUCH memory (48MB-192K)!

2005-05-29  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* water.cpp/.h
	  - water shaders now work more or less
	* texture.cpp
	  - bugfix for normal map creation and mipmapping enabled
	* water_vp.shader water_fp.shader
	  - water shaders work, but results are not satisfying

2005-05-21  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* model.cpp/h
	  - fixed shaders. Now specular per-pixel lighting works.

2005-05-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* viewmodel.cpp make_mesh.cpp/h model.cpp/h modelrender*.shader
	  - some shader improvements
	  - better modelview
	  - mesh creation helper functions for testing added

2005-05-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* texture.cpp/h and clients
	  - new mapping/clamping interface for texture class
	  - fixed texture usage bugs
	* model.cpp/h and clients
	  - now vertex and pixel shaders can be used featuring
	    per pixel ambient, diffuse and specular lighting
	    with normal maps, for per pixel detail of surfaces.
	    (many small things still need to be done)

2005-05-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* coastmap.cpp/h
	  - finally fixed ALL map/coastline generation bugs.
	    now all coastlines are correct!
