@@ -1,3 +1,9 @@
+2005-06-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* subsim.cpp parser.cpp texts.cpp
+	  - store and read text data by categories not by language
+	    now easier tracking of changes and handling of text
+	    numbers.
+
 2005-06-12  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* many files
 	  - lessened build dependencies
